# Atividade-Bootcamp

./: README.md  pyproject.toml
data/: dados.json
src/estoque_solidario/: __init__.py  __main__.py  cli.py  exceptions.py  models.py  repository.py  service.py
src/estoque_solidario_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_service.py
